test/resources/parser/failing/testITE1.scala
object MissingElse {
  if (true) { 1 }
}